Corregidos warning de Integer
El código tenía varios warnings:
"warning: [removal] Integer(int) in Integer has been deprecated and marked for removal"

Corregidos todos